metadata/force-app/main/default/objects/CustomName_Nzmxx__c/CustomName_Nzmxx__c.object-meta.xml
<CustomObject>
    <description>Description_mdfxi</description>
    <label>CustomLabel_sfIln</label>
    <nameField>
        <label>CustomLabel_sfIln</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_sfIlns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>