metadata/force-app/main/default/objects/CustomName_Nzmxx__c/fields/CustomField_yfroY__c.field-meta.xml
<CustomField>
    <fullName>CustomField_yfroY__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldmRHra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>